# vapoursynth-smoothuv

./: .gitignore  Makefile.am  RainbowSmooth.py  configure.ac  meson.build  readme.rst
src/: SmoothUV.cpp
